deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gin-init
spec:
  selector:
    app: gin-init
  ports:
    - protocol: TCP
      port: 40020
      targetPort: 40020
  type: ClusterIP
